# clippy-service

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Vagrantfile  doc.md  docco-langs.json
app/: Cargo.toml
app/src/: main.rs
etc/: cargo.firejail.profile  cargo.netfilter.profile  deploy_key.enc  firejail-developers.asc  install_firejail.sh
src/: clippy.rs  github.rs  handlers.rs  helpers.rs  main.rs
static/: index.html
static/docs/: clippy.html  github.html  handlers.html  helpers.html  index.html  main.html
