[package]
name = "clippy_service"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@create-build-execute.com>"]

[dependencies]
iron = "*"
urlencoded = "*"
logger ="*"
router = "*"
staticfile = "*"
redis = "^0.5.2"
rustc-serialize = "^0.3.18"
hyper = "^0.7.2"
url = "^0.5.5"
log = "^0.3.5"
env_logger = "^0.3"
time = "^0.1"
tempdir = "^0.3.4"
zip = "^0.1.6"
mime = "*"

[dependencies.bodyparser]
# has no release yet...
git = "https://github.com/iron/body-parser.git"

[dependencies.clippy]
git = "https://github.com/Manishearth/rust-clippy"
