[package]
name = "clippy-io"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@create-build-execute.com>"]

[dependencies]
# clippy = "*"
iron = "*"
urlencoded = "*"
logger ="*"
router = "*"
staticfile = "*"
redis = "0.5.2"

[dependencies.bodyparser]
# has no release yet...
git = "https://github.com/iron/body-parser.git"
