[package]
name = "clippy-io"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@create-build-execute.com>"]

[dependencies]
# clippy = "*"
iron = "*"
urlencoded = "*"
logger ="*"
router = "*"
staticfile = "*"
redis = "^0.5.2"
rustc-serialize = "^0.3.18"
hyper = "^0.7.2"
url = "^0.5.5"

[dependencies.bodyparser]
# has no release yet...
git = "https://github.com/iron/body-parser.git"
